cabal-version:      2.0
name:               servant-event-stream
version:            0.2.1.0
stability:          alpha
synopsis:           Servant support for Server-Sent events
category:           Servant, Web
description:
  This library adds necessary type combinators to support
  Server Sent Events within Servant ecosystem.

homepage:           https://github.com/bflyblue/servant-event-stream
bug-reports:        https://github.com/bflyblue/servant-event-stream/issues
license:            BSD3
license-file:       LICENSE
author:             Shaun Sharples
maintainer:         shaun.sharples@gmail.com
copyright:          (c) 2021 Shaun Sharples
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/bflyblue/servant-event-stream.git

library
  exposed-modules:    Servant.API.EventStream
  default-extensions:
    MultiParamTypeClasses
    OverloadedStrings

  build-depends:
      attoparsec
    , base                 >=4.10    && <4.18
    , binary               >=0.7     && <0.11
    , bytestring
    , containers
    , hedgehog
    , http-media           >=0.7.1.3 && <0.9
    , lens                 >=4.17    && <6
    , megaparsec
    , servant
    , servant-client       ^>=0.19
    , servant-client-core  ^>=0.19
    , servant-foreign      >=0.15    && <0.16
    , servant-js           >=0.9.4   && <0.10
    , servant-server       >=0.15    && <0.20
    , text                 >=1.2.3   && <2.1
    , wai-extra            >=3.0     && <3.2

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:      Servant.API.EventStreamTest
  build-tool-depends: tasty-discover:tasty-discover
  build-depends:
      base
    , hedgehog
    , servant
    , servant-event-stream
    , tasty
    , tasty-hedgehog
    , tasty-hunit
